--- a/python.html
+++ b/python.html
@@ -45,10 +45,18 @@
     </nav>
     
     <section>
-        <table border="2">
+        <table border="3">
             <thead>
                 <tr>
                     <th>NOME</th>
+                    <th>TURMA</TH>
+                    <th>LINK</th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+               
+                    <th>NOME</th>
+                    <th>TURMA</TH>
                     <th>LINK</th>
                 </tr>
                 <tr>
