--- a/python.html
+++ b/python.html
@@ -21,7 +21,13 @@
             font-family: Arial, Helvetica, sans-serif;
             font-size: large;
         }
-        
+        tr{
+            display: flex;
+            align-items: center;
+            padding: 18px;
+            font-family: Arial, Helvetica, sans-serif;
+            font-size: large;
+        }
     </style>
 
   
