--- a/python.html
+++ b/python.html
@@ -21,7 +21,7 @@
             font-family: Arial, Helvetica, sans-serif;
             font-size: large;
         }
-     section{
+     table{
             display: flex;
             align-items: center;
             padding: 18px;
