--- a/python.html
+++ b/python.html
@@ -23,7 +23,7 @@
         }
      table{
             display: flex;
-            align-items: center;
+            align-items: left;
             padding: 18px;
             font-family: Arial, Helvetica, sans-serif;
             font-size: large;
