--- a/python.html
+++ b/python.html
@@ -23,8 +23,10 @@
         }
      table{
             display: flex;
-            align-items: left;
+            justify-content: space-between;
+            align-items: center;
             padding: 18px;
+            color: black;
             font-family: Arial, Helvetica, sans-serif;
             font-size: large;
         }
