--- a/python.html
+++ b/python.html
@@ -21,7 +21,7 @@
             font-family: Arial, Helvetica, sans-serif;
             font-size: large;
         }
-     table{
+     thead{
             display: flex;
             justify-content: space-between;
             align-items: center;
