--- a/python.html
+++ b/python.html
@@ -21,15 +21,16 @@
             font-family: Arial, Helvetica, sans-serif;
             font-size: large;
         }
-     thead{
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 18px;
-            color: black;
-            font-family: Arial, Helvetica, sans-serif;
-            font-size: large;
+     .table-responsive{
+             width: 100%
         }
+       .table {
+           border: 1px solid black;
+           width: 50% 
+           margin: auto;
+         .table-status {
+                        margin-top: 20px;
+                        margin-bottom: 20px;
     </style>
 
   
