--- a/python.html
+++ b/python.html
@@ -27,7 +27,7 @@
        .table {
            border: 1px solid black;
            width: 50% 
-           margin: auto;
+           margin: center;
         }
          .table-status {
                         margin-top: 20px;
