--- a/python.html
+++ b/python.html
@@ -48,7 +48,7 @@
     </nav>
     
     <section>
-        <table border="3" margin:0 auto>
+        <table border="3" margin:50px auto>
             <thead>
                 <tr>
                     <th>NOME</th>
