--- a/python.html
+++ b/python.html
@@ -52,7 +52,7 @@
     </nav>
     
     <section>
-        <table border="3">
+        <table border="3"margin: 0 auto>
             <thead>
                 <tr>
                     <th>NOME</th>
