--- a/python.html
+++ b/python.html
@@ -52,22 +52,28 @@
     </nav>
     
     <section>
-        <table border="3" margin: 0 auto>
-            <thead>
-                <tr>
-                    <th>NOME</th>
-                    <th>TURMA</TH>
-                    <th>LINK</th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-               
-                    <th>NOME</th>
-                    <th>TURMA</TH>
-                    <th>LINK</th>
+        <table border="3"   align=center>
+            <thead align="center">
+                <tr >
+                    <th width=200>NOME</th>
+                    <th width=50>TURMA</TH>
+                    <th width=200>LINK</th>   
+                    <th></th> 
+                    <th></th> 
+                    <th></th>     
+                    <th width=200>NOME</th>
+                    <th width=50>TURMA</TH>
+                    <th width=200>LINK</th>
                 </tr>
                 <tr>
                     <td>JOÃO</td>
+                    <td>9º A</td>
+                    <td><a href="https://trinket.io/python3/d592ab4777">QUIZ do JOÃO 9ºA</a></td>   
+                    <th></th> 
+                    <th></th> 
+                    <th></th>                 
+                    <td>JOÃO </td>
+                    <td>9º A</td>
                     <td><a href="https://trinket.io/python3/d592ab4777">QUIZ do JOÃO 9ºA</a></td>
                 </tr>
                 <tr>
