--- a/python.html
+++ b/python.html
@@ -66,15 +66,16 @@
                     <th width=200>LINK</th>
                 </tr>
                 <tr>
-                    <td>JOÃO</td>
-                    <td>9º A</td>
-                    <td><a href="https://trinket.io/python3/d592ab4777">QUIZ do JOÃO 9ºA</a></td>   
+                    <td>LEILA</td>
+                    <td>9ºB</td>
+                    <td><a href="">QUIZ da Leila</a></td>   
                     <th></th> 
                     <th></th> 
                     <th></th>                 
-                    <td>JOÃO </td>
-                    <td>9º A</td>
-                    <td><a href="https://trinket.io/python3/d592ab4777">QUIZ do JOÃO 9ºA</a></td>
+                    <td>LUCAS </td>
+                    <td>9ºB</td>
+                    <td><a href="">QUIZ do Lucas </a></td>
+            
                 </tr>
                 <tr>
                     <td>VICTOR</td>
