--- a/python.html
+++ b/python.html
@@ -78,20 +78,48 @@
             
                 </tr>
                 <tr>
-                    <td>VICTOR</td>
-                    <td>55555555555</td>
+                    <td>JUAN</td>
+                    <td>9ºC</td>
+                    <td><a href="">QUIZ do Juan</a></td>   
+                    <th></th> 
+                    <th></th> 
+                    <th></th>                 
+                    <td>ANDRÉ</td>
+                    <td>9ºC</td>
+                    <td><a href="">QUIZ do André </a></td>
                 </tr>
                 <tr>
-                    <td>FELIPE 9ºA</td>
-                    <td>(13)777777777</td>
+                    <td>JOSÉ</td>
+                    <td>9ºB</td>
+                    <td><a href="">QUIZ do José</a></td>   
+                    <th></th> 
+                    <th></th> 
+                    <th></th>                 
+                    <td>ENZO</td>
+                    <td>9ºA</td>
+                    <td><a href="">QUIZ do Enzo </a></td>
                 </tr>
                 <tr>
-                    <td>KEROLYN 9ºB</td>
-                    <td>(13)888888888</td>
+                    <td>HADASSA</td>
+                    <td>9ºB</td>
+                    <td><a href="">QUIZ da Hadassa</a></td>   
+                    <th></th> 
+                    <th></th> 
+                    <th></th>                 
+                    <td>LINCOM</td>
+                    <td>9ºC</td>
+                    <td><a href="">QUIZ do Lincom </a></td>
                 </tr>
      <tr>
-                    <td>BRENDA 9ºB</td>
-                    <td>(13)888888888</td>
+                    <td>WILLIAN</td>
+                    <td>9ºB</td>
+                    <td><a href="">QUIZ do Willian</a></td>   
+                    <th></th> 
+                    <th></th> 
+                    <th></th>                 
+                    <td> VICTÓRIA</td>
+                    <td>9ºC</td>
+                    <td><a href="">QUIZ da Vitória </a></td>
                 </tr>
      <tr>
                     <td>VICTOR DA ROCHA  9ºB</td>
