--- a/python.html
+++ b/python.html
@@ -119,28 +119,85 @@
                     <th></th>                 
                     <td> VICTÓRIA</td>
                     <td>9ºC</td>
-                    <td><a href="">QUIZ da Vitória </a></td>
+                    <td><a href="">QUIZ da Victória </a></td>
                 </tr>
      <tr>
-                    <td>VICTOR DA ROCHA  9ºB</td>
-                    <td>(13)888888888</td>
+                    <td>ROBERTO</td>
+                    <td>8ºA</td>
+                    <td><a href="">QUIZ do Roberto</a></td>   
+                    <th></th> 
+                    <th></th> 
+                    <th></th>                 
+                    <td> VITÓRIA</td>
+                    <td>8ºA</td>
+                    <td><a href="">QUIZ da Vitória </a></td>
                 </tr>
                 <tr>
-                 <td>EDUARDO 9ºB</td>
-                 <td>999999999</td>
+                 <td>LUIZ AUGUSTO</td>
+                    <td>8ºC</td>
+                    <td><a href="">QUIZ do Luiz Augusto</a></td>   
+                    <th></th> 
+                    <th></th> 
+                    <th></th>                 
+                    <td> LUIZ ROBERTO</td>
+                    <td>8ºA</td>
+                    <td><a href="">QUIZ do Luiz Roberto </a></td>
              </tr>
              <tr>
-                 <td>KAUÃ 9ºC</td>
-                 <td>88888888888</td>
+                 <td>LUIZ GABRIEL</td>
+                    <td>8ºC</td>
+                    <td><a href="">QUIZ do Luiz Gabriel</a></td>   
+                    <th></th> 
+                    <th></th> 
+                    <th></th>                 
+                    <td> VICTOR</td>
+                    <td>8ºC</td>
+                    <td><a href="">QUIZ do Victor </a></td>
              </tr>
              <tr>
-                 <td>ISABELLA 9ºB</td>
-                 <td>77777777777</td>
+                 <td>JOÃO</td>
+                    <td>8ºC</td>
+                    <td><a href="">QUIZ do João</a></td>   
+                    <th></th> 
+                    <th></th> 
+                    <th></th>                 
+                    <td> CARLOS</td>
+                    <td>8ºA</td>
+                    <td><a href="">QUIZ do Carlos </a></td>
              </tr>
              <tr>
-                 <td>LEONARDO 9ºC</td>
-                 <td>22222222222222</td>
+                 <td>FERNANDO</td>
+                    <td>8ºC</td>
+                    <td><a href="">QUIZ do Fernando</a></td>   
+                    <th></th> 
+                    <th></th> 
+                    <th></th>                 
+                    <td> CARLOS</td>
+                    <td>8ºA</td>
+                    <td><a href="">QUIZ do Carlos </a></td>
              </tr>
+             <tr>
+                    <td>ANA JULIA </td>
+                    <td>8ºB</td>
+                    <td><a href="">QUIZ da Ana Julia</a></td>   
+                    <th></th> 
+                    <th></th> 
+                    <th></th>                 
+                    <td> KAUÊ</td>
+                    <td>8ºC</td>
+                    <td><a href="">QUIZ do Kauê </a></td>
+            </tr>
+            <tr>
+                    <td>ANA JULIA </td>
+                    <td>8ºB</td>
+                    <td><a href="">QUIZ da Ana Julia</a></td>   
+                    <th></th> 
+                    <th></th> 
+                    <th></th>                 
+                    <td> </td>
+                    <td></td>
+                    <td><a href=""></a></td>
+          </tr>
      
             </thead>
  
