--- a/python.html
+++ b/python.html
@@ -50,6 +50,18 @@
             </li>
         </ul>
     </nav>
+    <div class="row">
+        <div class="coluna">
+            <img src="fotos/9_segunda" alt="6º" style="width: 33,33%">
+        </div>
+        <div class="coluna">
+            <img src="fotos/9_2" alt="7º" style="width: 33,33%">
+        </div>
+        <div class="coluna">
+            <img src="fotos/6º1.jpg" alt="6º" style="width: 33,33%;">
+        </div>
+
+    </div>
     
     <section>
         <table border="3"   align=center>
