--- a/scracth.html
+++ b/scracth.html
@@ -18,6 +18,9 @@
             font-family: Arial, Helvetica, sans-serif;
             font-size: large;
         }
+         .table{
+              margin-left: auto;
+              margin-right: auto;
      div {
             text-align: right;
      }
