--- a/python5.html
+++ b/python5.html
@@ -21,6 +21,21 @@
          .table{
               margin-left: auto;
               margin-right: auto;
+        }
+        div {
+            text-align: right;
+     }
+
+     .coluna{
+    float: left;
+    width: 32%;
+   .row::after {
+    content: "";
+    align-items: center;
+    clear: both;
+    display: table;
+                                      
+   }
         
     </style>
    
