--- a/python5.html
+++ b/python5.html
@@ -59,13 +59,19 @@
         </ul>
     </nav>
     <section>
-        <table border="4">
-            <thead>
-                <tr>
-                    <th>NOME</th>
-                    <th>LINK</th>
-                    <th>NOME</th>
-                    <th>LINK</th>
+        <table border="3"   align=center>
+            <thead align="center">
+                <tr >
+                    <th width=200>NOME</th>
+                    <th width=50>TURMA</TH>
+                    <th width=200>LINK</th>   
+                    <th></th> 
+                    <th></th> 
+                    <th></th>     
+                    <th width=200>NOME</th>
+                    <th width=50>TURMA</TH>
+                    <th width=200>LINK</th>
+               
                 </tr>
                 <tr>
                     <td>JOÃO</td>
