--- a/python5.html
+++ b/python5.html
@@ -63,13 +63,13 @@
             <thead align="center">
                 <tr >
                     <th width=200>NOME</th>
-                    <th width=50>TURMA</TH>
+                    <th width=50>TURMA</th>
                     <th width=200>LINK</th>   
                     <th></th> 
                     <th></th> 
                     <th></th>     
                     <th width=200>NOME</th>
-                    <th width=50>TURMA</TH>
+                    <th width=50>TURMA</th>
                     <th width=200>LINK</th>
                
                 </tr>
