--- a/python.html
+++ b/python.html
@@ -66,10 +66,10 @@
     </nav>
     <div class="row">
         <div class="coluna">
-            <img src="fotos/9_segunda" alt="6º" style="width: 33,33%">
+            <img src="fotos/9_segunda.jpg" alt="9º" style="width: 33,33%">
         </div>
         <div class="coluna">
-            <img src="fotos/9_2" alt="7º" style="width: 33,33%">
+            <img src="fotos/9_2.jpg" alt="9º" style="width: 33,33%">
         </div>
         <div class="coluna">
             <img src="fotos/6º1.jpg" alt="6º" style="width: 33,33%;">
