--- a/scracth.html
+++ b/scracth.html
@@ -9,6 +9,7 @@
     <style type="text/css">
         body {
                 background-color: rgb(240, 200, 125);
+                font-family:Arial, Helvetica, sans-serif
       }
       ul {
             display: flex;
@@ -70,7 +71,7 @@
             <img src="fotos/7º.jpg" alt="7º" style="width: 33,33%">
         </div>
         <div class="coluna">
-            <img src="fotos/6º1.jpg" alt="6º" style="width: 33,33%;">
+            <img src="fotos/6º1.jpg" alt="6º" style="width: 33,33%">
         </div>
 
     </div>
