--- a/scracth.html
+++ b/scracth.html
@@ -72,7 +72,7 @@
             <img src="fotos/7º.jpg" alt="7º" style="width: 33,33%">
         </div>
         <div class="coluna">
-            <img src="fotos/6º1.jpg" alt="6º" style="width: 33,33%">
+            <img src="fotos/6º1.jpg" alt="6º" style="width: 33,33%;">
         </div>
 
     </div>
