--- a/scracth.html
+++ b/scracth.html
@@ -61,14 +61,16 @@
    
     <div class="row">
         <div class="coluna">
-            <img src="fotos/6º.jpg" alt="6º" style="width: 33,33%">
+            <img src="fotos/6º.jpg" alt="6º" style="width: 25%">
         </div>
         <div class="coluna">
-            <img src="fotos/7º.jpg" alt="7º" style="width: 33,33%">
+            <img src="fotos/7º.jpg" alt="7º" style="width: 25%">
         </div>
         <div class="coluna">
-            <img src="fotos/6º1.jpg" alt="6º" style="width: 33,33%;">
+            <img src="fotos/6º1.jpg" alt="6º" style="width: 25%;">
         </div>
+        <div class="coluna">
+            <img src="fotos/6º3.jpg" alt=6º style="width:25%;">
 
     </div>
     <section>
