--- a/scracth.html
+++ b/scracth.html
@@ -26,7 +26,7 @@
     float: left;
     width: 25%;
    .row::after {
-    content: "";
+    
     align-items: center;
     clear: both;
     display: table;
@@ -61,16 +61,16 @@
    
     <div class="row">
         <div class="coluna">
-            <img src="fotos/6º.jpg" alt="6º" style="width: 33%">
+            <img src="fotos/6º.jpg" alt="6º" style="width: 95%">
         </div>
         <div class="coluna">
-            <img src="fotos/7º.jpg" alt="7º" style="width: 32%">
+            <img src="fotos/7º.jpg" alt="7º" style="width: 95%">
         </div>
         <div class="coluna">
-            <img src="fotos/6º1.jpg" alt="6º" style="width: 32%;">
+            <img src="fotos/6º1.jpg" alt="6º" style="width: 95%;">
         </div>
         <div class="coluna">
-            <img src="fotos/6º3.jpg" alt=6º style="width:32%;">
+            <img src="fotos/6º3.jpg" alt=6º style="width:95%;">
 
     </div>
     <section>
@@ -88,131 +88,131 @@
                     <th width=200>LINK</th>
                 </tr>
                 <tr>
-                    <td>LEILA</td>
-                    <td>9ºB</td>
-                    <td><a href="">QUIZ da Leila</a></td>   
+                    <td>ENZO</td>
+                    <td>7ºB</td>
+                    <td><a href="">HISTÓRIA do Enzo</a></td>   
                     <th></th> 
                     <th></th> 
                     <th></th>                 
-                    <td>LUCAS </td>
-                    <td>9ºB</td>
-                    <td><a href="">QUIZ do Lucas </a></td>
+                    <td>JOSÉ </td>
+                    <td>7ºC</td>
+                    <td><a href="">HISTÓRIA do José </a></td>
             
                 </tr>
                 <tr>
-                    <td>JUAN</td>
-                    <td>9ºC</td>
-                    <td><a href="">QUIZ do Juan</a></td>   
+                    <td>ADRIANO</td>
+                    <td>7ºC</td>
+                    <td><a href="">HISTÓRIA do Adriano</a></td>   
                     <th></th> 
                     <th></th> 
                     <th></th>                 
-                    <td>ANDRÉ</td>
-                    <td>9ºC</td>
-                    <td><a href="">QUIZ do André </a></td>
+                    <td>JOSIANE </td>
+                    <td>7ºC</td>
+                    <td><a href="">HISTÓRIA da Josiane </a></td>
                 </tr>
                 <tr>
-                    <td>JOSÉ</td>
-                    <td>9ºB</td>
-                    <td><a href="">QUIZ do José</a></td>   
+                    <td>JULIA GARCIA</td>
+                    <td>7ºA</td>
+                    <td><a href="">HISTÓRIA da Julia</a></td>   
                     <th></th> 
                     <th></th> 
                     <th></th>                 
-                    <td>ENZO</td>
-                    <td>9ºA</td>
-                    <td><a href="">QUIZ do Enzo </a></td>
+                    <td>HELOISA</td>
+                    <td>7ºB</td>
+                    <td><a href="">HISTÓRIA da Heloisa </a></td>
                 </tr>
                 <tr>
-                    <td>HADASSA</td>
-                    <td>9ºB</td>
-                    <td><a href="">QUIZ da Hadassa</a></td>   
+                    <td>PEDRO</td>
+                    <td>7ºC</td>
+                    <td><a href="">HISTÓRIA do Pedro</a></td>   
                     <th></th> 
                     <th></th> 
                     <th></th>                 
-                    <td>LINCOM</td>
+                    <td>JULIA LOURDES</td>
                     <td>9ºC</td>
-                    <td><a href="">QUIZ do Lincom </a></td>
+                    <td><a href="">HISTÓRIA da Júlia </a></td>
                 </tr>
      <tr>
-                    <td>WILLIAN</td>
+                    <td>LARA</td>
                     <td>9ºB</td>
-                    <td><a href="">QUIZ do Willian</a></td>   
+                    <td><a href="">HISTÓRIA da Lara</a></td>   
                     <th></th> 
                     <th></th> 
                     <th></th>                 
-                    <td> VICTÓRIA</td>
+                    <td> IZABELLA</td>
                     <td>9ºC</td>
-                    <td><a href="">QUIZ da Victória </a></td>
+                    <td><a href="">HISTÓRIA da Izabella </a></td>
                 </tr>
      <tr>
-                    <td>ROBERTO</td>
-                    <td>8ºA</td>
-                    <td><a href="">QUIZ do Roberto</a></td>   
+                    <td>ROGERIO RICHARD</td>
+                    <td>7ºB</td>
+                    <td><a href="">HISTÓRIA do Richard</a></td>   
                     <th></th> 
                     <th></th> 
                     <th></th>                 
-                    <td> VITÓRIA</td>
-                    <td>8ºA</td>
-                    <td><a href="">QUIZ da Vitória </a></td>
+                    <td> ROGERIO </td>
+                    <td>7ºA</td>
+                    <td><a href="">HISTÓRIA do Rogério </a></td>
                 </tr>
                 <tr>
-                 <td>LUIZ AUGUSTO</td>
-                    <td>8ºC</td>
+                 <td>VICTOR</td>
+                    <td>7ºA</td>
                     <td><a href="">QUIZ do Luiz Augusto</a></td>   
                     <th></th> 
                     <th></th> 
                     <th></th>                 
-                    <td> LUIZ ROBERTO</td>
-                    <td>8ºA</td>
-                    <td><a href="">QUIZ do Luiz Roberto </a></td>
+                    <td> LARA DANTAS</td>
+                    <td>7ºC</td>
+                    <td><a href="">HISTÓRIA da Lara Dantas </a></td>
              </tr>
              <tr>
-                 <td>LUIZ GABRIEL</td>
-                    <td>8ºC</td>
-                    <td><a href="">QUIZ do Luiz Gabriel</a></td>   
+                 <td>GIOVANNA </td>
+                    <td>7ºB</td>
+                    <td><a href="">HISTÓRIA da Giovanna</a></td>   
                     <th></th> 
                     <th></th> 
                     <th></th>                 
-                    <td> VICTOR</td>
-                    <td>8ºC</td>
-                    <td><a href="">QUIZ do Victor </a></td>
+                    <td> </td>
+                    <td></td>
+                    <td><a href=""> </a></td>
              </tr>
              <tr>
-                 <td>JOÃO</td>
-                    <td>8ºC</td>
-                    <td><a href="">QUIZ do João</a></td>   
+                 <td></td>
+                    <td></td>
+                    <td><a href=""></a></td>   
                     <th></th> 
                     <th></th> 
                     <th></th>                 
-                    <td> CARLOS</td>
-                    <td>8ºA</td>
-                    <td><a href="">QUIZ do Carlos </a></td>
+                    <td></td>
+                    <td></td>
+                    <td><a href=""></a></td>
              </tr>
              <tr>
-                 <td>FERNANDO</td>
-                    <td>8ºC</td>
-                    <td><a href="">QUIZ do Fernando</a></td>   
+                 <td></td>
+                    <td></td>
+                    <td><a href=""></a></td>   
                     <th></th> 
                     <th></th> 
                     <th></th>                 
-                    <td> CARLOS</td>
-                    <td>8ºA</td>
-                    <td><a href="">QUIZ do Carlos </a></td>
+                    <td></td>
+                    <td></td>
+                    <td><a href=""></a></td>
              </tr>
              <tr>
-                    <td>ANA JULIA </td>
-                    <td>8ºB</td>
-                    <td><a href="">QUIZ da Ana Julia</a></td>   
+                    <td></td>
+                    <td></td>
+                    <td><a href=""></a></td>   
                     <th></th> 
                     <th></th> 
                     <th></th>                 
-                    <td> KAUÊ</td>
-                    <td>8ºC</td>
-                    <td><a href="">QUIZ do Kauê </a></td>
+                    <td></td>
+                    <td></td>
+                    <td><a href=""></a></td>
             </tr>
             <tr>
-                    <td>ANA JULIA </td>
-                    <td>8ºB</td>
-                    <td><a href="">QUIZ da Ana Julia</a></td>   
+                    <td></td>
+                    <td></td>
+                    <td><a href=""></a></td>   
                     <th></th> 
                     <th></th> 
                     <th></th>                 
