--- a/scracth.html
+++ b/scracth.html
@@ -21,6 +21,14 @@
      div {
             text-align: right;
      }
+        div1 {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 18px;
+            font-family: Arial, Helvetica, sans-serif;
+            font-size: large;
+        }
 
      .coluna{
     float: left;
@@ -58,6 +66,10 @@
             </li>
         </ul>
     </nav>
+    </div>
+        <div1>
+            <a href="https://scratch.mit.edu/projects/842973611">ABERTURA</a>
+    </div1>
    
     <div class="row">
         <div class="coluna">
