--- a/scracth.html
+++ b/scracth.html
@@ -67,9 +67,7 @@
         </ul>
     </nav>
     </div>
-        <div1>
-            <a href="https://scratch.mit.edu/projects/842973611">ABERTURA</a>
-    </div1>
+        
    
     <div class="row">
         <div class="coluna">
@@ -85,6 +83,10 @@
             <img src="fotos/6º3.jpg" alt=6º style="width:95%;">
 
     </div>
+        </div>
+        <div1>
+            <a href="https://scratch.mit.edu/projects/842973611">ABERTURA</a>
+    </div1>
     <section>
         <table border="3"   align=center>
             <thead align="center">
