--- a/scracth.html
+++ b/scracth.html
@@ -84,7 +84,7 @@
 
     </div>
         </div>
-        <div1>
+        <div1 align=center>
             <a href="https://scratch.mit.edu/projects/842973611">ABERTURA</a>
     </div1>
     <section>
