--- a/scracth.html
+++ b/scracth.html
@@ -85,7 +85,7 @@
     </div>
         </div>
         <div1 align=center>
-            <a href="https://scratch.mit.edu/projects/842973611">ABERTURA</a>
+            <a href="https://scratch.mit.edu/projects/842973611" target="_blank">ABERTURA</a>
     </div1>
     <section>
         <table border="3"   align=center>
