--- a/scracth.html
+++ b/scracth.html
@@ -20,15 +20,11 @@
         }
      div {
             text-align: right;
-     }
-        div1 {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 18px;
             font-family: Arial, Helvetica, sans-serif;
             font-size: large;
-        }
+     }
+       
+        
 
      .coluna{
     float: left;
@@ -84,9 +80,9 @@
 
     </div>
         </div>
-        <div1 align=center>
+        <div>
             <a href="https://scratch.mit.edu/projects/842973611" target="_blank">ABERTURA</a>
-    </div1>
+    </div>
     <section>
         <table border="3"   align=center>
             <thead align="center">
