--- a/scracth.html
+++ b/scracth.html
@@ -19,7 +19,7 @@
             font-size: large;
         }
      div {
-            text-align: right;
+            text-align: center;
             font-family: Arial, Helvetica, sans-serif;
             font-size: large;
      }
