--- a/scracth.html
+++ b/scracth.html
@@ -22,6 +22,7 @@
             text-align: center;
             font-family: Arial, Helvetica, sans-serif;
             font-size: large;
+            padding: 18px;
      }
        
         
