--- a/scracth.html
+++ b/scracth.html
@@ -19,12 +19,17 @@
             font-size: large;
         }
      div {
-            text-align: center;
+            text-align: right;
             font-family: Arial, Helvetica, sans-serif;
             font-size: large;
             padding: 18px;
      }
-       
+       div1 {
+            text-align: center;
+            font-family: Arial, Helvetica, sans-serif;
+            font-size: large;
+            padding: 20px;
+     }
         
 
      .coluna{
@@ -81,9 +86,9 @@
 
     </div>
         </div>
-        <div>
+        <div1>
             <a href="https://scratch.mit.edu/projects/842973611" target="_blank">ABERTURA</a>
-    </div>
+    </div1>
     <section>
         <table border="3"   align=center>
             <thead align="center">
