--- a/python.html
+++ b/python.html
@@ -60,7 +60,7 @@
                 <a href="python5.html"><font color=green>ODS 5</font></a>
             </li>
             <li>
-                <a href="nuvem.html"><font color=green>Fala dos alunos</font></a>
+                <a href="nuvem.html"><font color=green>Opinião dos alunos</font></a>
             </li>
         </ul>
     </nav>
