--- a/python5.html
+++ b/python5.html
@@ -53,7 +53,7 @@
                 <a href="python.html"><font color=red>ODS 3</font></a>
             </li>
             <li>
-                <a href="nuvem.html"><font color=red>Fala dos alunos</font></a>
+                <a href="nuvem.html"><font color=red>Opinião dos alunos</font></a>
             </li>
 
         </ul>
