--- a/scracth.html
+++ b/scracth.html
@@ -65,7 +65,7 @@
                 <a href="python.html"><font color=brow>ODS 3</font></a>
             </li>
             <li>
-                <a href="nuvem.html"><font color=brow>Fala dos alunos</font></a>
+                <a href="nuvem.html"><font color=brow>Opinião dos alunos</font></a>
             </li>
         </ul>
     </nav>
