--- a/python5.html
+++ b/python5.html
@@ -27,13 +27,12 @@
      }
 
      .coluna{
-    float: left;
-    width: 32%;
+             float: left;
+             width: 25%;
    .row::after {
-    content: "";
-    align-items: center;
-    clear: both;
-    display: table;
+            align-items: center;
+            clear: both;
+            display: table;
                                       
    }
         
@@ -60,13 +59,16 @@
     </nav>
     <div class="row">
         <div class="coluna">
-            <img src="fotos/9_segunda.jpg" alt="9º" style="width: 33,33%">
+            <img src="fotos/9_segunda.jpg" alt="9º" style="width: 95%">
         </div>
         <div class="coluna">
-            <img src="fotos/9_2.jpg" alt="9º" style="width: 33,33%">
+            <img src="fotos/9_2.jpg" alt="9º" style="width: 95%">
         </div>
         <div class="coluna">
-            <img src="fotos/6º1.jpg" alt="6º" style="width: 33,33%;">
+            <img src="fotos/6º1.jpg" alt="6º" style="width: 95%;">
+        </div>
+         <div class="coluna">
+            <img src="fotos/9_segunda" alt="6º" style="width: 95%;">
         </div>
 
     </div>
