--- a/python5.html
+++ b/python5.html
@@ -68,7 +68,7 @@
             <img src="fotos/6º1.jpg" alt="6º" style="width: 95%;">
         </div>
          <div class="coluna">
-            <img src="fotos/9_segunda" alt="6º" style="width: 95%;">
+            <img src="fotos/9_segunda.jpg" alt="9º" style="width: 95%;">
         </div>
 
     </div>
