--- a/python5.html
+++ b/python5.html
@@ -123,7 +123,7 @@
                 <tr>
                      <td>VICTOR DE SOUZA</td>
                     <td>9ºB</td>
-                    <td><a href="">QUIZ do Victor</a></td>   
+                    <td><a href="">QUIZ do Calazans</a></td>   
                     <th></th> 
                     <th></th> 
                     <th></th>                 
