--- a/scracth.html
+++ b/scracth.html
@@ -22,7 +22,7 @@
             text-align: right;
      }
 
-     div1 {
+     div_1 {
             display: flex;
             justify-content: center;
             align-items: center;
@@ -83,8 +83,8 @@
         </div>
 
     </div>
-        <div1 ><a href="https://scratch.mit.edu/projects/842973611/fullscreen/" target="_blank">ABERTURA</a>
-    </div1>
+        <div_1 ><a href="https://scratch.mit.edu/projects/842973611/fullscreen/" target="_blank">ABERTURA</a>
+    </div_1>
     <section>
         <table border="3"   align=center>
             <thead align="center">
