--- a/scracth.html
+++ b/scracth.html
@@ -184,55 +184,76 @@
                     <th></th> 
                     <th></th> 
                     <th></th>                 
-                    <td> </td>
-                    <td></td>
-                    <td><a href=""> </a></td>
+                    <td>IZABELLA MARKILENE </td>
+                    <td>6ºA</td>
+                    <td><a href="">HISTÓRIA da Izabella </a></td>
              </tr>
              <tr>
-                 <td></td>
-                    <td></td>
-                    <td><a href=""></a></td>   
+                 <td>KAUANY</td>
+                    <td>6ºB</td>
+                    <td><a href="">HISTÓRIA da Kauany</a></td>   
                     <th></th> 
                     <th></th> 
                     <th></th>                 
-                    <td></td>
-                    <td></td>
-                    <td><a href=""></a></td>
+                    <td>LUIZ VINICIUS</td>
+                    <td>6ºA</td>
+                    <td><a href="">HISTÓRIA do Luiz</a></td>
              </tr>
              <tr>
-                 <td></td>
-                    <td></td>
-                    <td><a href=""></a></td>   
+                 <td>MANUELA</td>
+                    <td>6ºA</td>
+                    <td><a href="">HISTÓRIA da Manuela</a></td>   
                     <th></th> 
                     <th></th> 
                     <th></th>                 
-                    <td></td>
-                    <td></td>
-                    <td><a href=""></a></td>
+                    <td>RHYANNA</td>
+                    <td>6ºA</td>
+                    <td><a href="">HISTÓRIA da Rhyanna</a></td>
              </tr>
              <tr>
-                    <td></td>
-                    <td></td>
-                    <td><a href=""></a></td>   
+                    <td>INGRID</td>
+                    <td>6ºB</td>
+                    <td><a href="">HISTÓRIA da Ingrid</a></td>   
                     <th></th> 
                     <th></th> 
                     <th></th>                 
-                    <td></td>
-                    <td></td>
-                    <td><a href=""></a></td>
+                    <td>LAURA BIANCA</td>
+                    <td>6ºB</td>
+                    <td><a href="">HISTÓRIA da Laura</a></td>
             </tr>
             <tr>
-                    <td></td>
-                    <td></td>
-                    <td><a href=""></a></td>   
+                    <td>KAMILLY</td>
+                    <td>6ºB</td>
+                    <td><a href="">HISTÓRIA da Kamilly</a></td>   
                     <th></th> 
                     <th></th> 
                     <th></th>                 
-                    <td> </td>
-                    <td></td>
-                    <td><a href=""></a></td>
+                    <td>KAUAN </td>
+                    <td>6ºA</td>
+                    <td><a href="">HISTÓRIA do Kauan</a></td>
           </tr>
-     
+                <tr>
+                    <td>LUIS GUSTAVO</td>
+                    <td>6ºC</td>
+                    <td><a href="">HISTÓRIA do Luis</a></td>   
+                    <th></th> 
+                    <th></th> 
+                    <th></th>                 
+                    <td>ANA VITORIA</td>
+                    <td>6ºA</td>
+                    <td><a href="">HISTÓRIA da Ana</a></td>
+          </tr>
+              <tr>
+                    <td>ENDRIL</td>
+                    <td>6ºA</td>
+                    <td><a href="">HISTÓRIA do Endril</a></td>   
+                    <th></th> 
+                    <th></th> 
+                    <th></th>                 
+                    <td>MURILO</td>
+                    <td>6ºC</td>
+                    <td><a href="">HISTÓRIA do Murilo</a></td>
+          </tr>
             </thead>
  
         </table>
