--- a/scracth.html
+++ b/scracth.html
@@ -186,7 +186,7 @@
                     <th></th>                 
                     <td>IZABELLA MARKILENE </td>
                     <td>6ºA</td>
-                    <td><a href="">HISTÓRIA da Izabella </a></td>
+                    <td><a href="">As mulheres não são empregadas</a></td>
              </tr>
              <tr>
                  <td>KAUANY</td>
@@ -213,7 +213,7 @@
              <tr>
                     <td>INGRID</td>
                     <td>6ºB</td>
-                    <td><a href="">HISTÓRIA da Ingrid</a></td>   
+                    <td><a href="">O filho que ajuda a mãe</a></td>   
                     <th></th> 
                     <th></th> 
                     <th></th>                 
